--- a/overall/week06/spectacle2.css
+++ b/overall/week06/spectacle2.css
@@ -27,7 +27,7 @@ body {
 .example_c {
 
   font-family: 'Shrikhand' ;
-  background: url(http://i.giphy.com/fsULJFFGv8X3G.gif);
+/*  background: url(http://i.giphy.com/fsULJFFGv8X3G.gif);*/
 color: white !important;
 text-transform: lowercase;
 text-decoration: none;
