--- a/overall/midtermUpdated/about.css
+++ b/overall/midtermUpdated/about.css
@@ -1,56 +1,89 @@
+/*this is the standard menu with the lemon background */
 header{
 	background-image: url("Lemons.png");
-
-  /*background-repeat: no-repeat;
-  background-attachment: fixed;*/
   background-size: cover;
   font-size: 3vw;
   color: transparent;
-  
+  /*I wasn't sure how to adjust the size of the header so I used 
+  transparent text to make it the desired size*/
 }
 body{
 	font-family: 'Playfair Display', serif;
 	font-weight: 600;
 	font-size: 1vw;
 }
-.flexbox
-{
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-	/*margin-right: -200px auto;*/
-	
 
-}
+
 strong{
-	color: #0F847E;
+	color: #F4F40F;
 	font-weight: 900;
+	/*the font weight didn't change much but the important words 
+	are now in yellow*/
 }
+
+/*this is the styling and flex for the paras of text on the about 
+page*/
 .flexLeft
 {
-	position: absolute;
-	top: 60vw;
-	left: 3vw;
+	
 	font-size: 1.25vw;
 	line-height: 1.25;
-	width: 60vw;
+	/*line height was important to make sure it felt more readable*/
+	width: 20vw;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: justify-start;
-	margin-left: 15vw; 
+	margin-left: 5vw; 
 	color: white;
 	background-color: black;
-	padding: 5vh;
+	padding: 3vh;
 }
+
+.flexLeft.one
+{
+	position: absolute;
+	top: 35vw;
+	left: 7vw;
+	
+}
+.flexLeft.two{
+position: absolute;
+	top: 55vw;
+	left: 7vw;
+	
+}
+
+.flexLeft.three
+{
+position: absolute;
+	top: 45vw;
+	left: 60vw;
+	
+}
+
+
+
+/*this mysterious box below is what gives a ton of extra scrolling 
+space at the bottom.*/
+
+.z
+{
+	background-color: transparent;
+	
+	padding: 1vh;
+	position: absolute;
+	width: 25vw;
+	height: 30vw;
+	top: 120vw;
+	left: 40vw;
+	
+}
+
 
 .title
 {
-	/*color: #0DD3CD;
-	font-size: 4vw;
-	text-shadow: 2px 2px #0F847E;
-	*/
+	
 	letter-spacing: 2vw;
 	color: #F4F40F;
 	font-size: 4vw;
@@ -60,20 +93,24 @@ strong{
 	top: 18vw;
 	left: 38vw;
 }
-.socks
+
+
+/*this is the image on the about page of a painting I made*/
+.aboutIMG
 {
-	/*background-image: url(sockHeart.jpg);
-	background-size: cover;
-    background-color: #F4F40F;
-    background-blend-mode: multiply;*/
+	
 	width: 35vh;
 	height: auto;
 	position: absolute;
-	top: 54vh;
-	left: 75vh;
+	top: 72vh;
+	left: 72vh;
 	z-index: 2;
-	/*border: 1vw solid black;*/
+	/*I initially thought of overlapping the image on the text so 
+	I added the z-index, I left it in there in case*/
 }
+
+
+
 .logo
 {
 position: absolute;
@@ -82,6 +119,15 @@ height: auto;
 top: 2vw;
 left: 4vh;
 }
+
+/*these next few buttons are for the standard menu 
+they transition between different colors for text, background and border
+I also made sure that the button that describes the page the 
+user is on is highlighted.
+
+I made the ease 0s so that the buttons respond quickly and are
+more lively.*/
+
 
 .example_c {
 color: black;
@@ -93,69 +139,53 @@ padding: 20px;
 border: 4px solid black !important;
 display: inline-block;
 transition: all 0.4s ease 0s;
-
-/*box-shadow: 25px 25px #FE6F8C;
-*/font-size:1.5vw;
-
-
-/*top: 650px;
-left: 1400px;
-position: absolute;*/
+font-size:1.5vw;
 
 }
+
+
+
 .example_c.about:hover{
-  /*top: 650px;
-left: 1450px;
-position: absolute;*/
 color: white;
 background: black;
+/*these are options I used to keep this button "selected"*/
 text-shadow: none;
 position: absolute;
 left: 30vw;
 top: 7vw;
-
 }
+
 .example_c.about{
-  /*top: 650px;
-left: 1450px;
-position: absolute;*/
 color: white;
 background: black;
+/*these are options I used to keep this button "selected"*/
 text-shadow: none;
 position: absolute;
 left: 30vw;
 top: 7vw;
 }
-.example_c.proj{
-  /*top: 650px;
-left: 1450px;
-position: absolute;*/
 
+.example_c.proj{
 text-shadow: none;
 position: absolute;
 left: 40vw;
 top: 7vw;
 }
-.example_c.bucket{
-  /*top: 650px;
-left: 1450px;
-position: absolute;*/
 
+.example_c.bucket{
 text-shadow: none;
 position: absolute;
 left: 51vw;
 top: 7vw;
 }
-.example_c.love{
-  /*top: 650px;
-left: 1450px;
-position: absolute;*/
 
+.example_c.love{
 text-shadow: none;
 position: absolute;
 left: 63vw;
 top: 7vw;
 }
+
 .example_c:hover {
 color: #ffffff !important;
 background: black;
@@ -163,9 +193,15 @@ border: 4px solid white !important;
 transition: all 0.4s ease 0s;
 text-shadow: none;
 
-/*box-shadow: 25px 25px #ffffff;*/
-/*text-shadow: 2px 2px #F4F40F;*/
+
 }
+
+
+<!--  I tried flex initially but I think I got 
+frustrated or panicked when it didn't work and 
+since I was having a whole crisis even though it 
+was more frustrating I decided them to place them manually -->
+
 /*.pos1{
 	/*display: flex;
 	flex-direction: row;
