--- a/overall/midtermUpdated/main.css
+++ b/overall/midtermUpdated/main.css
@@ -1,58 +1,47 @@
+/*I was initially going to make a media query thing here but I was not sure what to do with it*/
+
 body{
 	background-image: url("Lemons1.png");
-
-  /*background-repeat: no-repeat;
-  background-attachment: fixed;*/
-  background-size: cover;
-  font-size: 12vw;
+/*the background is an asset I made to fit the lemons theme*/
   color: transparent;
-
+  font-size: 11vw;
+  /*these two lines set "hi" in the html so that I can push the icons
+  to the bottom of the page, I wasn't sure how else to get them 
+  to the bottom but not completely like align-items might */
+  background-size: cover;
+ /* I wanted the background to cover the entire space*/
   
+
 }
 
 
-
-/*.aside {
-	background-color: transparent;
-	color: white;
-	font-weight: bold;
-	
-	position: absolute;
-	width: 60vw;
-	height: 15vh;
-	top: 22vw;
-	left: 33vh;
-	text-align: center;
-	font-family: 'Frank Ruhl Libre', serif;
-	font-size: 1.5vw;
-	letter-spacing: 3;
-
-}*/
-
-/*.second {
-	background-color: black;
-	color: white;
-	position: absolute;
-	width: 45vw;
-	height: 15vh;
-	top: 32vw;
-	left: 40vh;
-	text-align: center;
-	font-family: 'Frank Ruhl Libre', serif;
-	font-size: 1.5vw;
-	letter-spacing: 3;
-}
-*/
 .buttons
 {
+/*  this class is to group all the icons in flex boxes so they all line up in a row*/
+  position: relative;
+  top: 0.5vw;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	/*justify-content: flex-start;*/
+  align-items: center;
 	margin: 5vh;
 
 }
+
+/*this part is to make the cross fading of each text icon with 
+the actual picture icon when the mouse hovers over it
+the link I used as a source for this is
+http://css3.bradshawenterprises.com/cfimg/*/
+
+/*these three stanzas of code are to set the top icon's opacity to
+0, which will make the icon on the bottom visible and I made them
+transition with ease in but not out so that they feel more lively
+*/
+
+/*the 4 sections I did this for are about, project, bucket list and 
+a lil love*/
 #about {
+
   position:relative;
   height:50px;
   width:46px;
@@ -93,7 +82,7 @@ body{
 #bucket {
   position:relative;
   height:50px;
-  width:46px;
+  width:4px;
   margin:0 auto;
 }
 
