--- a/overall/midtermUpdated/proj.css
+++ b/overall/midtermUpdated/proj.css
@@ -1,42 +1,44 @@
+/*this class is to move the text on the circle buttons down 
+so the entire word would fit*/
+.down {
+	margin-top: 1vw;
+}
+
+/*this mysterious box below is what gives a ton of extra scrolling 
+space at the bottom.*/
+.z
+{
+	background-color: transparent;
+	
+	padding: 1vh;
+	position: absolute;
+	width: 25vw;
+	height: 30vw;
+	top: 100vw;
+	left: 40vw;
+	z-index: -1;
+}
+
+/*this is the standard menu with the lemon background */
 header{
 	background-image: url("Lemons.png");
-
-  /*background-repeat: no-repeat;
-  background-attachment: fixed;*/
   background-size: cover;
   font-size: 2.5vw;
   color: transparent;
-  
+  /*I wasn't sure how to adjust the size of the header so I used 
+  transparent text to make it the desired size*/
 }
+
+
 body{
 	font-family: 'Playfair Display', serif;
 	font-weight: 600;
 	font-size: 1vw;
 	background-color: white;
 }
-.flexbox
-{
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-	/*margin-right: -200px auto;*/
-	
 
-}
-strong{
-	color: #0F847E;
-	font-weight: 900;
-}
-.flexLeft
-{
-	width: 30vw;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: justify-start;
-	margin-left: 20vw; 
-}
+
+
 
 .title
 {
@@ -48,35 +50,9 @@ strong{
 	position: absolute;
 	top: 18vw;
 	left: 30vw;
+}
 
- /* background: url(http://i.giphy.com/fsULJFFGv8X3G.gif);
-  background-size: cover;
-  background-position: center;*/
-  /*display: flex;
-  justify-content: center;
-  align-items: center;*/
-  
-  /*-webkit-background-clip: text;
-  color: transparent; // set to transparent, otherwise won't see the background
-  
-  width: 1500px;
-  height: 1500px;
-  box-sizing: border-box;
-  font-size: 58px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 100px;
-  flex-shrink: 0;*/
-}
-.socks
-{
-	width: 40vh;
-	height: auto;
-	position: absolute;
-	top: 50vh;
-	left: 95vh;
-	border: 1vw solid black;
-}
+/*this is the logo in the upper left corner*/
 .logo
 {
 position: absolute;
@@ -86,6 +62,13 @@ top: 2vw;
 left: 4vh;
 }
 
+/*these next few buttons are for the standard menu 
+they transition between different colors for text, background and border
+I also made sure that the button that describes the page the 
+user is on is highlighted.
+
+I made the ease 0s so that the buttons respond quickly and are
+more lively.*/
 .example_c {
 color: black;
 
@@ -96,36 +79,11 @@ padding: 20px;
 border: 4px solid black !important;
 display: inline-block;
 transition: all 0.4s ease 0s;
-
-/*box-shadow: 25px 25px #FE6F8C;
-*/font-size:1.5vw;
-
-
-/*top: 650px;
-left: 1400px;
-position: absolute;*/
+font-size:1.5vw;
 
 }
-.eximple_c {
-color: black;
-
-text-decoration: none;
-text-shadow: 4px 4px #F4F40F;
-background: white;
-padding: 20px;
-/*border: 4px solid black !important;*/
-display: inline-block;
-transition: all 0.4s ease 0s;
-
-/*box-shadow: 25px 25px #FE6F8C;
-*/font-size:1.5vw;
 
 
-/*top: 650px;
-left: 1400px;
-position: absolute;*/
-
-}
 .example_c.about:hover{
   /*top: 650px;
 left: 1450px;
@@ -204,21 +162,44 @@ text-shadow: none;
 /*text-shadow: 2px 2px #F4F40F;*/
 }
 
+
+
+
+/*These next buttons are the menu options under projects that I placed
+by hand because they would not let me make them bigger when I adjusted
+them to get bigger when hovered over. This took lots of time but
+I got it to work. I made sure they don't have a border and there
+were gifs for each theme that worked.
+
+The 4 subsections I made these buttons for were art, words, kindness
+and random.*/
+
+
+.eximple_c {
+color: black;
+
+text-decoration: none;
+text-shadow: 4px 4px #F4F40F;
+background: white;
+padding: 20px;
+display: inline-block;
+transition: all 0.4s ease 0s;
+font-size:1.5vw;
+
+}
+
 .eximple_c.art{
 color: white !important;
 text-transform: lowercase;
 text-decoration: none;
 text-shadow: none; 
 letter-spacing: 0.75vw;
-/*text-shadow: 4px 4px white;*/
-
-/*background-image: url(https://images2.static-bluray.com/reviews/4076_1.jpg);*/
-/*padding: white 20px;*/
-/*border: 5px solid #F4F40F !important;
-*/ width: 14vw;
-     height: 14vw;
-      /*background: white;*/
-      background-image: url(art2.gif);
+border-color: transparent;
+background-image: url(art2.gif);
+padding: 20px;
+width: 14vw;
+height: 14vw;
+      
       border-radius: 50%;
 display: block;
 text-align: center;
@@ -230,38 +211,17 @@ top: 30vw;
 left: 20vh;
 border: none;
 
-/*font-family: 'Press Start 2P', cursive;*/
-/*font-family: 'Press Start 2P', cursive;*/
-/*
-box-shadow: 25px 25px gold, 25px 25px white, 25px 25px black;
-font-size: 50px;
-/*justify-content: flexćstart;*/
-
-
-/*justify-content: space-around;
-align-content: center;
-flex-direction: row;
-text-align: center;
-flex-wrap: wrap;*/
-/*top: 650px;
-left: 1400px;
-position: absolute;*/
 }
 
 .eximple_c.art:hover {
 color: #ffffff !important;
 text-transform: lowercase;
-/*background: #FE6F8C;*/
 background-image: url(art2.gif);
-/*border-color: white !important;*/
 transition: all 0.4s ease 0s;
-/*font-family: 'Press Start 2P', cursive;*/
 font-weight:900;
-/*box-shadow: 5vw 5vw white;*/
 width: 25vw;
      height: 25vw;
      z-index: 5;
-
 }
 
 .eximple_c.word{
@@ -271,13 +231,10 @@ text-decoration: none;
 text-shadow: none; 
 letter-spacing: 0.75vw;
 border-color: transparent;
-/*text-shadow: 4px 4px white;*/
-
 background-image: url(word4.gif);
 padding: 20px;
-/*border: 5px solid #F4F40F !important;
-*/ width: 14vw;
-     height: 14vw;
+width: 14vw;
+height: 14vw;
       
       border-radius: 50%;
 display: block;
@@ -289,6 +246,7 @@ position: absolute;
 top: 30vw;
 left: 55vh;
 }
+
 .eximple_c.word:hover {
 color: white !important;
 text-transform: lowercase;
@@ -297,13 +255,12 @@ width: 25vw;
      height: 25vw;
 transition: all 0.4s ease 0s;
 
-/*box-shadow: 5vw 5vw white;
-*/
 width: 25vw;
      height: 25vw;
      z-index: 5;
 
 }
+
 .eximple_c.kind{
 color: white !important;
 text-transform: lowercase;
@@ -312,12 +269,9 @@ text-decoration: none;
 text-shadow: none; 
 letter-spacing: 0.75vw;
 border-color: transparent;
-/*text-shadow: 4px 4px white;*/
 background-image: url(kind2.gif);
-/*background-image: url(https://images2.static-bluray.com/reviews/4076_1.jpg);*/
 padding: 20px;
-/*border: 5px solid #F4F40F !important;
-*/ width: 14vw;
+width: 14vw;
      height: 14vw;
       
       border-radius: 50%;
@@ -330,6 +284,7 @@ position: absolute;
 top: 30vw;
 left: 90vh;
 }
+
 .eximple_c.kind:hover {
 color: white !important;
 text-transform: lowercase;
@@ -337,12 +292,11 @@ background-image: url(kind2.gif);
 
 transition: all 0.4s ease 0s;
 
-/*box-shadow: 5vw 5vw white;*/
-
 width: 25vw;
      height: 25vw;
      z-index: 5;
 }
+
 .eximple_c.rand{
 color: white !important;
 text-transform: lowercase;
@@ -350,12 +304,10 @@ text-decoration: none;
 text-shadow: none; 
 border-color: transparent;
 letter-spacing: 0.75vw;
-/*text-shadow: 4px 4px white;*/
 background-image: url(rand.gif);
-/*background-image: url(https://images2.static-bluray.com/reviews/4076_1.jpg);*/
+
 padding: 20px;
-/*border: 5px solid #F4F40F !important;
-*/ width: 14vw;
+width: 14vw;
      height: 14vw;
       
       border-radius: 50%;
@@ -368,35 +320,15 @@ position: absolute;
 top: 30vw;
 left: 125vh;
 }
+
 .eximple_c.rand:hover {
 color: white !important;
 text-transform: lowercase;
 background-image: url(rand.gif);
-
 transition: all 0.4s ease 0s;
-
-/*box-shadow: 5vw 5vw white;*/
-
 width: 25vw;
      height: 25vw;
      z-index: 5;
 }
-/*#aboutG
-{
-	grid-column-start: 2;
-	grid-column-end: 5;
-}
-*/
-/*.example_c.next2{
-  top: 100px;
-left: 300px;
-position: absolute;
-}
-
-.example_c.back1{
-  top: 100px;
-left: 25px;
-position: absolute;
-}*/
 
 
