--- a/overall/midtermUpdated/selfLove.css
+++ b/overall/midtermUpdated/selfLove.css
@@ -2,7 +2,8 @@
 
 
 
-
+/*this class is to move the text on the circle buttons down 
+so the entire word would fit*/
 
 
 .down1{
@@ -10,12 +11,8 @@
 	text-align: center;
 }
 
-/*.objj:hover {
-	z-index: 1;
-	transition-duration: 1.5s;
-	transform: scale(1.3);
-}*/
-
+/*this mysterious box below is what gives a ton of extra scrolling 
+space at the bottom.*/
 
 .z
 {
@@ -30,7 +27,7 @@
 	z-index: -1;
 }
 
-
+/*this is the 3 by 3 grid for the 9 situations*/
 .submenu{
     width: 90%;
     margin: 0 auto;
@@ -47,10 +44,14 @@
 
 }
 
+/*this is to make sure that the link 
+doesn't have a hyperlink color*/
 a{
 	color: inherit;
 	text-decoration: none;
 }
+
+/*these are the general settings for the grid items */
 .obj{
     background-color: white;
     color: black;
@@ -61,10 +62,11 @@ a{
     z-index: 1;
     transition: all 0.4s ease 0s;
 
-    /*position: absolute;
-    width: 10vw;
-    height: 10vw;*/
+  
 }
+
+/*This code fo obj1 and obj2 is to make it change to another 
+image when hovered over*/
 .obj.obj1:hover
 {
 	background-image: url("ly1.png");
@@ -207,11 +209,7 @@ grid-row: 4fr;
 */
 
 header{
-	/*background-image: url("Lemons.png");*/
-
-  /*background-repeat: no-repeat;
-  background-attachment: fixed;*/
-  /*background-size: cover;*/
+	
   font-size: 2.5vw;
   background-color: white;
   color: transparent;
@@ -263,34 +261,7 @@ strong{
 	display: flex;
 	flex-wrap: nowrap;
 }
- /* background: url(http://i.giphy.com/fsULJFFGv8X3G.gif);
-  background-size: cover;
-  background-position: center;*/
-  /*display: flex;
-  justify-content: center;
-  align-items: center;*/
-  
-  /*-webkit-background-clip: text;
-  color: transparent; // set to transparent, otherwise won't see the background
-  
-  width: 1500px;
-  height: 1500px;
-  box-sizing: border-box;
-  font-size: 58px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 100px;
-  flex-shrink: 0;*/
-
-.socks
-{
-	width: 40vh;
-	height: auto;
-	position: absolute;
-	top: 50vh;
-	left: 95vh;
-	border: 1vw solid black;
-}
+ 
 .logo
 {
 position: absolute;
@@ -299,6 +270,15 @@ height: auto;
 top: 2vw;
 left: 4vh;
 }
+
+
+/*these next few buttons are for the standard menu 
+they transition between different colors for text, background and border
+I also made sure that the button that describes the page the 
+user is on is highlighted.
+
+I made the ease 0s so that the buttons respond quickly and are
+more lively.*/
 
 .example_c {
 color: black;
@@ -320,24 +300,7 @@ left: 1400px;
 position: absolute;*/
 
 }
-.eximple_c {
-color: black;
 
-text-decoration: none;
-text-shadow: 4px 4px #F4F40F;
-background: white;
-padding: 20px;
-/*border: 4px solid black !important;*/
-display: inline-block;
-transition: all 0.4s ease 0s;
-
-/*box-shadow: 25px 25px #FE6F8C;
-*/font-size:1.5vw;
-
-
-/*top: 650px;
-left: 1400px;
-position: absolute;*/
 
 }
 .example_c.about:hover{
@@ -430,200 +393,4 @@ text-shadow: none;
 /*box-shadow: 25px 25px #ffffff;*/
 /*text-shadow: 2px 2px #F4F40F;*/
 }
-
-.eximple_c.art{
-color: white !important;
-text-transform: lowercase;
-text-decoration: none;
-text-shadow: none; 
-letter-spacing: 0.75vw;
-/*text-shadow: 4px 4px white;*/
-
-/*background-image: url(https://images2.static-bluray.com/reviews/4076_1.jpg);*/
-/*padding: white 20px;*/
-/*border: 5px solid #F4F40F !important;
-*/ width: 14vw;
-     height: 14vw;
-      /*background: white;*/
-      background-image: url(art2.gif);
-      border-radius: 50%;
-display: block;
-text-align: center;
-margin-left: auto;
-margin-right: auto;
-transition: all 0.4s ease 0s;
-position: absolute;
-top: 30vw;
-left: 20vh;
-border: none;
-
-/*font-family: 'Press Start 2P', cursive;*/
-/*font-family: 'Press Start 2P', cursive;*/
-/*
-box-shadow: 25px 25px gold, 25px 25px white, 25px 25px black;
-font-size: 50px;
-/*justify-content: flexćstart;*/
-
-
-/*justify-content: space-around;
-align-content: center;
-flex-direction: row;
-text-align: center;
-flex-wrap: wrap;*/
-/*top: 650px;
-left: 1400px;
-position: absolute;*/
-}
-
-.eximple_c.art:hover {
-color: #ffffff !important;
-text-transform: lowercase;
-/*background: #FE6F8C;*/
-background-image: url(art2.gif);
-/*border-color: white !important;*/
-transition: all 0.4s ease 0s;
-/*font-family: 'Press Start 2P', cursive;*/
-font-weight:900;
-/*box-shadow: 5vw 5vw white;*/
-width: 25vw;
-     height: 25vw;
-     z-index: 5;
-
-}
-
-.eximple_c.word{
-color: white !important;
-text-transform: lowercase;
-text-decoration: none;
-text-shadow: none; 
-letter-spacing: 0.75vw;
-border-color: transparent;
-/*text-shadow: 4px 4px white;*/
-
-background-image: url(word4.gif);
-padding: 20px;
-/*border: 5px solid #F4F40F !important;
-*/ width: 14vw;
-     height: 14vw;
-      
-      border-radius: 50%;
-display: block;
-text-align: center;
-margin-left: auto;
-margin-right: auto;
-transition: all 0.4s ease 0s;
-position: absolute;
-top: 30vw;
-left: 55vh;
-}
-.eximple_c.word:hover {
-color: white !important;
-text-transform: lowercase;
-background-image: url(word4.gif);
-width: 25vw;
-     height: 25vw;
-transition: all 0.4s ease 0s;
-
-/*box-shadow: 5vw 5vw white;
-*/
-width: 25vw;
-     height: 25vw;
-     z-index: 5;
-
-}
-.eximple_c.kind{
-color: white !important;
-text-transform: lowercase;
-
-text-decoration: none;
-text-shadow: none; 
-letter-spacing: 0.75vw;
-border-color: transparent;
-/*text-shadow: 4px 4px white;*/
-background-image: url(kind2.gif);
-/*background-image: url(https://images2.static-bluray.com/reviews/4076_1.jpg);*/
-padding: 20px;
-/*border: 5px solid #F4F40F !important;
-*/ width: 14vw;
-     height: 14vw;
-      
-      border-radius: 50%;
-display: block;
-text-align: center;
-margin-left: auto;
-margin-right: auto;
-transition: all 0.4s ease 0s;
-position: absolute;
-top: 30vw;
-left: 90vh;
-}
-.eximple_c.kind:hover {
-color: white !important;
-text-transform: lowercase;
-background-image: url(kind2.gif);
-
-transition: all 0.4s ease 0s;
-
-/*box-shadow: 5vw 5vw white;*/
-
-width: 25vw;
-     height: 25vw;
-     z-index: 5;
-}
-.eximple_c.rand{
-color: white !important;
-text-transform: lowercase;
-text-decoration: none;
-text-shadow: none; 
-border-color: transparent;
-letter-spacing: 0.75vw;
-/*text-shadow: 4px 4px white;*/
-background-image: url(rand.gif);
-/*background-image: url(https://images2.static-bluray.com/reviews/4076_1.jpg);*/
-padding: 20px;
-/*border: 5px solid #F4F40F !important;
-*/ width: 14vw;
-     height: 14vw;
-      
-      border-radius: 50%;
-display: block;
-text-align: center;
-margin-left: auto;
-margin-right: auto;
-transition: all 0.4s ease 0s;
-position: absolute;
-top: 30vw;
-left: 125vh;
-}
-.eximple_c.rand:hover {
-color: white !important;
-text-transform: lowercase;
-background-image: url(rand.gif);
-
-transition: all 0.4s ease 0s;
-
-/*box-shadow: 5vw 5vw white;*/
-
-width: 25vw;
-     height: 25vw;
-     z-index: 5;
-}
-/*#aboutG
-{
-	grid-column-start: 2;
-	grid-column-end: 5;
-}
-*/
-/*.example_c.next2{
-  top: 100px;
-left: 300px;
-position: absolute;
-}
-
-.example_c.back1{
-  top: 100px;
-left: 25px;
-position: absolute;
-}*/
-
 
