--- a/overall/midtermUpdated/tokyo.css
+++ b/overall/midtermUpdated/tokyo.css
@@ -1,4 +1,4 @@
-
+/*this is the css for the back button*/
 .back
 {
 color: #0DD3CD;
@@ -11,44 +11,58 @@ color: #0DD3CD;
 
 }
 
-
+/*this is the size setting for the tokyo tower img*/
 .tower
 {
   width: 30vw;
   height: auto;
 }
 
+/*this is the size setting for the shibuya crossing img*/
 .shibuya
 {
   width: 40vw;
   height: auto;
 }
-
+/*
+this is the size setting for the sensoji temple */
 .temple
 {
   width: 40vw;
   height: auto;
 }
+
+/*this is the size setting for the digital art museum img*/
 .museum
 {
   width: 40vw;
   height: auto;
 }
+
+/*this is the size setting for the black sesame ice cream img*/
 .sesame
 {
   width: 30vw;
   height: auto;
 }
+
+/*this is the size setting for the kinaku-ji
+*/
 .kinkaku
 {
   width: 40vw;
   height: auto;
 }
 
+/*this is to make sure that the link 
+doesn't have a hyperlink color*/
 a{
   color: inherit;
   text-decoration: none;
 }
+
+/*this mysterious box below is what gives a ton of extra scrolling 
+space at the bottom.*/
 
 .z
 {
@@ -63,6 +77,7 @@ a{
 	z-index: -1;
 }
 
+/*these are the settings for the paragraphs*/
 p{
   background-color: #0DD3CD;
   color: white;
@@ -70,6 +85,8 @@ p{
   width: 30vw;
   line-height: 1.5;
 }
+
+/*these are the settings for the sub headings*/
 h2
 {
 color: #0DD3CD;
@@ -79,6 +96,7 @@ color: #0DD3CD;
   text-align: center;
 }
 
+/*this is the flex that held the 5 boxes together*/
 .flex1{
     
     display: flex;
@@ -92,10 +110,15 @@ color: #0DD3CD;
 
 }
 
+/*this is to make sure that the link 
+doesn't have a hyperlink color*/
 a{
 	color: inherit;
 	text-decoration: none;
 }
+
+/*this is the formatting for each of the 5 things to do 
+in tokyo*/
 .item{
   display: flex;
     flex-direction: column;
@@ -116,151 +139,14 @@ a{
     height: 10vw;*/
 }
 
-/*.obj.obj1
-{
-  background-color: black;
-    color: white;
-}*/
-/*.obj1:hover
-{
-	background-image: url("water.gif");
-	background-size: cover;
-	width: 50vw;
-	height: 50vw;
-	transition: all 0.4s ease 0s;
-	border: none;
-	z-index:2;
-}*/
-
-/*.obj1{
-    display: flex;
-    justify-content: center;
-   grid-column-start: 2fr;
-   grid-column-end: 5fr;
-   grid-row: 2fr;
-
-}
-
-
-.obj2{
-    display: flex;
-    justify-content: center;
-   grid-column-start: 5fr;
-   grid-column-end: 8fr;
-grid-row: 2fr;
-}
-}
-
-.obj3{
-    display: flex;
-    justify-content: center;
-    grid-column-start: 8fr;
-   grid-column-end: 12fr;
-grid-row: 2fr;
-
-}
-
-.obj4{
-    display: flex;
-    justify-content: center;
-   grid-column-start: 2fr;
-   grid-column-end: 5fr;
-   grid-row: 3fr;
-}
-
-
-.obj5{
-    display: flex;
-    justify-content: center;
-   grid-column-start: 5fr;
-   grid-column-end: 8fr;
-grid-row: 3fr;
-}
-}
-
-.obj6{
-    display: flex;
-    justify-content: center;
-    grid-column-start: 8fr;
-   grid-column-end: 10fr;
-grid-row: 3fr;
-
-}
-
-.obj7{
-    display: flex;
-    justify-content: center;
-   grid-column-start: 2fr;
-   grid-column-end: 5fr;
-   grid-row: 4fr;
-}
-
-
-.obj8{
-    display: flex;
-    justify-content: center;
-   grid-column-start: 5fr;
-   grid-column-end: 8fr;
-grid-row: 4fr;
-}
-}
-
-.obj9{
-    display: flex;
-    justify-content: center;
-    grid-column-start: 8fr;
-   grid-column-end: 10fr;
-grid-row: 4fr;
-
-}
-*/
-
-/*.obj4:hover{
-   color: black;
-   text-shadow: 2px 2px #0DD3CD;
-   grid-column-start: 7;
-   grid-column-end: 7;
-}
-
-
-.obj3:hover{
-    color: black;
-   text-shadow: 2px 2px #0DD3CD;
-   grid-column-start: 6;
-   grid-column-end: 6;
-}
-
-.obj2:hover{
-   color: black;
-   text-shadow: 2px 2px #0DD3CD;
-   grid-column-start: 5;
-   grid-column-end: 5;
-    
-}
-
-.obj1:hover{
-    
-    color: #0DD3CD;
-   text-shadow: 2px 2px black;
-   grid-column-start: 4;
-   grid-column-end: 4;
-}
-
-
-*/
 
 header{
-	/*background-image: url("Lemons.png");*/
-
-  /*background-repeat: no-repeat;
-  background-attachment: fixed;*/
-  /*background-size: cover;*/
   font-size: 2.5vw;
   background-color: white;
-  color: transparent;
-
-  
+  color: transparent; 
 }
+
+
 body{
 	font-family: 'Playfair Display', serif;
 	font-weight: 600;
@@ -269,29 +155,9 @@ body{
 	background-size: cover;
 	background-attachment: fixed;
 }
-.flexbox
-{
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-	/*margin-right: -200px auto;*/
-	
 
-}
-strong{
-	color: #0F847E;
-	font-weight: 900;
-}
-.flexLeft
-{
-	width: 30vw;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: justify-start;
-	margin-left: 20vw; 
-}
+
+
 
 #title
 {
@@ -307,34 +173,7 @@ strong{
 	display: flex;
 	/*flex-wrap: nowrap;*/
 }
- /* background: url(http://i.giphy.com/fsULJFFGv8X3G.gif);
-  background-size: cover;
-  background-position: center;*/
-  /*display: flex;
-  justify-content: center;
-  align-items: center;*/
-  
-  /*-webkit-background-clip: text;
-  color: transparent; // set to transparent, otherwise won't see the background
-  
-  width: 1500px;
-  height: 1500px;
-  box-sizing: border-box;
-  font-size: 58px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 100px;
-  flex-shrink: 0;*/
-
-.socks
-{
-	width: 40vh;
-	height: auto;
-	position: absolute;
-	top: 50vh;
-	left: 95vh;
-	border: 1vw solid black;
-}
+ 
 .logo
 {
 position: absolute;
@@ -344,6 +183,13 @@ top: 2vw;
 left: 4vh;
 }
 
+/*these next few buttons are for the standard menu 
+they transition between different colors for text, background and border
+I also made sure that the button that describes the page the 
+user is on is highlighted.
+
+I made the ease 0s so that the buttons respond quickly and are
+more lively.*/
 .example_c {
 color: black;
 
@@ -358,32 +204,10 @@ transition: all 0.4s ease 0s;
 /*box-shadow: 25px 25px #FE6F8C;
 */font-size:1.5vw;
 
-
-/*top: 650px;
-left: 1400px;
-position: absolute;*/
-
 }
-.eximple_c {
-color: black;
-
-text-decoration: none;
-text-shadow: 4px 4px #F4F40F;
-background: white;
-padding: 20px;
-/*border: 4px solid black !important;*/
-display: inline-block;
-transition: all 0.4s ease 0s;
-
-/*box-shadow: 25px 25px #FE6F8C;
-*/font-size:1.5vw;
 
 
-/*top: 650px;
-left: 1400px;
-position: absolute;*/
 
-}
 .example_c.about:hover{
   /*top: 650px;
 left: 1450px;
@@ -470,8 +294,5 @@ background: black;
 border: 4px solid white !important;
 transition: all 0.4s ease 0s;
 text-shadow: none;
-
-/*box-shadow: 25px 25px #ffffff;*/
-/*text-shadow: 2px 2px #F4F40F;*/
 }
 
