--- a/overall/styleMain.css
+++ b/overall/styleMain.css
@@ -22,11 +22,16 @@ h1 {
   font-size: 75px;
 }
 
-
+/*.flexbox {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}*/
 .week1{
   width: 483px;
   background-color: black;
   color: gold;
+  padding: 0.25vw;
   font-family: 'Francois One', sans-serif;
   transition: all 0.3s ease;
   text-align: center;
@@ -35,7 +40,7 @@ h1 {
   box-shadow:
                 1px 1px gold,
                 2px 2px gold,
-                3px 3px gold;
+                6px 6px gold;
         -webkit-transform: translateX(-3px);
         transform: translateX(-3px);
         -webkit-transform: scale(1.3);
